fix z-indexing issue

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -22,6 +22,7 @@
       max-width: 400px;
       width: 100%;
       padding: 0 50px;
+      z-index: 999;
       
       .row {
         width: 100%;
